# video-raw-ingest

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: AUTODL.md  CHANGELOG.md  ENGINEERING.md  LLM_PLUGIN.md  OPERATIONS.md
src/video_raw_ingest/: __init__.py  cli.py  ffmpeg_util.py  lesson_merged.schema.json  merge.py  mineru_run.py  output_layout.py  paths.py  slide_extract.py  validate.py  whisperx_run.py
src/video_raw_ingest/llm/: __init__.py  client.py  env_loader.py  plugin.py
tools/: batch_ingest.sh
